<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meta_package_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="743542724@qq.com">gdtr</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>plumbing_interface_demo</exec_depend>

  <exec_depend>topic_demo</exec_depend>
  <exec_depend>service_demo</exec_depend>
  <exec_depend>action_demo</exec_depend>
  <exec_depend>parameter_demo</exec_depend>

  <exec_depend>topic_demo_py</exec_depend>
  <exec_depend>service_demo_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
